styling done and resizing of photos from unsplash API fetch is done.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,9 +7,14 @@
     <div class="col-lg-6 col-md-8 mx-auto">
       <h1 class="fw-light">Album example</h1>
       <p class="lead text-muted">
-        Something short and leading about the collection below—its contents, the
-        creator, etc. Make it short and sweet, but not too short so folks don’t
-        simply skip over it entirely.
+        Tilde keffiyeh whatever hot chicken subway tile id mlkshk church-key
+        single-origin coffee est health goth williamsburg venmo cred. Unicorn
+        gentrify vexillologist eu. Squid franzen blue bottle kale chips freegan,
+        iPhone chillwave occupy tousled. Tempor shoreditch enamel pin fugiat
+        YOLO irony. Listicle chambray proident aliquip keytar YOLO est
+        lumbersexual laborum slow-carb 90's photo booth vexillologist unicorn.
+        Chicharrones elit intelligentsia banjo quinoa green juice pok pok ramps
+        tofu meh.
       </p>
       <p>
         <a href="#" class="btn btn-primary my-2">Main call to action</a>
@@ -18,34 +23,46 @@
     </div>
   </div>
 </section>
-
-<div class="album py-5 bg-light">
-  <div class="container">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-      <div *ngFor="let image of images" class="card shadow-sm">
-        <picture class="pic-container">
-          <img src="{{ image.urls.small }}" alt="random photos from unsplash" />
-        </picture>
-        <div class="col">
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <p class="card-text">{{ image.alt_description }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button
-                    type="button"
-                    class="btn btn-sm btn-outline-secondary"
-                  >
-                    View
-                  </button>
-                  <button
-                    type="button"
-                    class="btn btn-sm btn-outline-secondary"
-                  >
-                    Edit
-                  </button>
+<main>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div *ngFor="let image of images">
+          <div class="col">
+            <div class="card shadow-sm">
+              <picture class="bd-placeholder-img card-img-top">
+                <!-- random images below this tag! 
+                                |
+                                |
+                                V
+                -->
+                <img
+                  class="THE_IMAGE"
+                  src="{{ image.urls.small }}"
+                  alt="random photos from unsplash"
+                  width="100%"
+                  height="225"
+                />
+              </picture>
+              <div class="card-body">
+                <p class="card-text">{{ image.alt_description }}</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                    >
+                      View
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-sm btn-outline-secondary"
+                    >
+                      Edit
+                    </button>
+                  </div>
+                  <small class="text-muted">9 mins</small>
                 </div>
-                <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
@@ -53,4 +70,4 @@
       </div>
     </div>
   </div>
-</div>
+</main>
