--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,35 +1,110 @@
 .pic-container{
     align-self: center;
 }
+.THE_IMAGE{
+    display: flex;
+    margin: auto;
+    
+}
+.lead{
+    text-align: justify;
+}
+.card{
+    width: ;
+    max-width: 100%;
+    height: auto;
+    /* margin: auto; */
+}
+.main{
+    width: 75%;
+    float: none;
+    justify-content: center;
+}
+.col{
+    width: 100%;
+    flex: 0 0 auto;
+}
+.row{
+    max-width: 100%;
+    padding-right: calc(var(--bs-gutter-x) /2);
+    padding-left: calc(var(--bs-gutter-x) /2);
+    margin-top: var(--bs-gutter-y);
+}
+
 
 /* mobile devices */
 @media screen and (max-width: 480px){
-    .card-body{
+    .card{
         
-        background-color: red;
+    }
+    .card-body{
+       
+    }
+    .THE_IMAGE{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
+
 /* iPads, Tablets */
 @media screen and (min-width: 481px) and  (max-width: 768px){
+    .card{
+        
+    }
     .card-body{
-        background-color: orange;
+    
+    }
+    .THE_IMAGE{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
+
+
 /* Small screens, laptops */
 @media screen and (min-width: 769px) and (max-width: 1024px){
+    .card{
+        
+    }
     .card-body{
-        background-color: green;
+    }
+    .THE_IMAGE{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
+
+
 /* Desktops, large screens */
 @media screen and (min-width: 1025px) and (max-width: 1200px){
+    .card{
+        
+    }
+    .THE_IMAGE{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
+    }
     .card-body{
-        background-color: maroon;
+        
     }
 }
+
+
 /* Extra large screens, TV */
 @media screen and (min-width: 1201px){
+    .THE_IMAGE{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .card{
+        
+    }
     .card-body{
-        background-color:lavender;
+       
     }
 }
