manual layout for the enlargedPhoto. finally decided to make the hero photo to the left and details on the right. also added hotlinks to the users instagram and unsplash. lastly. created folder called dumps which is just a scrap folder. will deleting it after

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,13 +5,9 @@
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
           <p class="text-muted">
-            Nostrud sriracha in beard sunt consectetur forage art party,
-            chambray wolf williamsburg enim. Thundercats nisi sed, eu umami pug
-            vinyl activated charcoal laboris 3 wolf moon deserunt YOLO lorem.
-            Occupy ea activated charcoal street art sriracha. Cloud bread
-            waistcoat single-origin coffee, roof party tbh irure stumptown
-            tattooed. Iceland subway tile VHS mumblecore 8-bit enamel pin
-            pour-over pinterest, cornhole in adaptogen.
+            This site is only intended for educational purposes as i used both unsplash api and my own photos to display in this site.
+
+            Nostrud sriracha in beard sunt consectetur forage art party, chambray wolf williamsburg enim. Thundercats nisi sed, eu umami pug vinyl activated charcoal laboris 3 wolf moon deserunt YOLO lorem.
           </p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
@@ -46,7 +42,7 @@
           />
           <circle cx="12" cy="13" r="4" />
         </svg>
-        <strong>Album</strong>
+        <strong>My Photo App</strong>
       </a>
       <button
         class="navbar-toggler"
