--- a/src/app/enlarge-photo/enlarge-photo.component.css
+++ b/src/app/enlarge-photo/enlarge-photo.component.css
@@ -1,148 +1,129 @@
 /* main */
-.container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 25%;
-    grid-template-rows: 1fr;
-    
-    
-    /* box-shadow: 0px 0px 20px 5px #bcbcbc; */
-   
-    margin: 10px;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 25%;
+  grid-template-rows: 1fr;
 
-    /* guide only
+  /* box-shadow: 0px 0px 20px 5px #bcbcbc; */
+
+  margin: 10px;
+
+  /* guide only
     border: 1px solid blueviolet; */
 }
 
-
 /* hero photo */
 
-.hero_photo_container{
-    grid-area: heroPhoto;
-    grid-column-start: 1;
-    grid-column-end: 3;
+.hero_photo_container {
+  grid-area: heroPhoto;
+  grid-column-start: 1;
+  grid-column-end: 3;
 
-    grid-row-start: 1;
-    grid-row-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
 
-
-    /* get rid of this and use vw  */
-    /* max-width: 100%;
+  /* get rid of this and use vw  */
+  /* max-width: 100%;
     max-height: 85%; */
 
-    /* background-color: #212529; */
+  /* background-color: #212529; */
 
-    /* guide only
+  /* guide only
     border: 5px solid darkkhaki; */
-    
 }
 
-.labelForZoom{
-    
-    
+.labelForZoom {
 }
-.hero_photo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.hero_photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    /* border: 3px solid darkkhaki; */
+  /* border: 3px solid darkkhaki; */
 }
-.enlargedImage{
-    display: block;
-    margin-left:auto;
-    margin-right: auto;  
+.enlargedImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
 
-    /* display: flex;
+  /* display: flex;
     justify-content: center;
     align-items: center; */
-    
-    /* border: 1px solid darkkhaki;   */
+
+  /* border: 1px solid darkkhaki;   */
 }
 
 /* zoomed when clicked */
-input[type=checkbox] {
-    display: none;
+input[type="checkbox"] {
+  display: none;
 }
-  
+
 .hero_photo img {
-    
-    transition: transform 0.50s ease;
-    cursor: zoom-in;
+  transition: transform 0.5s ease;
+  cursor: zoom-in;
 
-
-    /* -moz-transition: all 1s ease;
+  /* -moz-transition: all 1s ease;
     -ms-transition: all 1s ease;
     -webkit-transition: all 1s ease;
     -o-transition: all 1s ease; */
 }
-  
-input[type=checkbox]:checked ~ label > img {
-    transform: scale(2);
-    margin: 200px;
-    box-shadow: 0px 0px 20px 100% #000000;
-    cursor: zoom-out;
-    
-    
+
+input[type="checkbox"]:checked ~ label > img {
+  transform: scale(2);
+  margin: 200px;
+  box-shadow: 0px 0px 20px 100% #000000;
+  cursor: zoom-out;
 }
 
-
-.hero_photo_caption{
-    
-
+.hero_photo_caption {
 }
 
-.spacing{
-    padding: 1vw;
-    
+.spacing {
+  padding: 1vw;
 }
 
-.separate{
-
-    border-top: 1px solid #F8F9FA;
+.separate {
+  border-top: 1px solid #f8f9fa;
 }
-
 
 /* user settings */
 
-.user_details_camera_settings_location_container{
-    grid-area: userAndLocationSettings;
-    grid-column-start: 3;
-    grid-column-end: 4;
+.user_details_camera_settings_location_container {
+  grid-area: userAndLocationSettings;
+  grid-column-start: 3;
+  grid-column-end: 4;
 
-    grid-row-start: 1;
-    grid-row-end: 3;
-    background-color: #808080;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  background-color: #808080;
 
-    /* guide only
+  /* guide only
     border: 1px solid gold; */
 }
 
-
-
-.user_name{
-    font-size: x-large;
+.user_name {
+  font-size: x-large;
 }
 
-.links{
-    display:block;
-
+.links {
+  display: block;
 }
 
-.instagram{
-    display: inline-block;
-    margin: 0.5vw;
-    
+.instagram {
+  display: inline-block;
+  margin: 0.5vw;
 }
 
-.photo_link{
-    display: inline-block;
-    margin: 0.5vw;
+.photo_link {
+  display: inline-block;
+  margin: 0.5vw;
 }
-.user_link{
-    display: inline-block;
-    margin: 0.5vw;
+.user_link {
+  display: inline-block;
+  margin: 0.5vw;
 }
-
 
 /*
 .thumb_photos_container{
@@ -159,35 +140,32 @@ input[type=checkbox]:checked ~ label > img {
 }
 */
 
-
-
 /* text */
-.hero_photo_label,   .typography_settings, .link_typography {
-    color: #F8F9FA;
-    
+.hero_photo_label,
+.typography_settings,
+.link_typography {
+  color: #f8f9fa;
 }
 
 /* links */
-a:link{
-    color: #F8F9FA;
-    text-decoration: none;
+a:link {
+  color: #f8f9fa;
+  text-decoration: none;
 }
 a:visited {
-    color: #F8F9FA;
-    text-decoration: none;
+  color: #f8f9fa;
+  text-decoration: none;
 }
-  
+
 a:hover {
-    color: #ADB5BD;
-    text-decoration: underline;
+  color: #adb5bd;
+  text-decoration: underline;
 }
-  
+
 a:active {
-    color: #ADB5BD;
-    text-decoration: underline;
+  color: #adb5bd;
+  text-decoration: underline;
 }
-
-
 
 /* media screen adjustments below here ! */
 /*           |                          */
@@ -195,91 +173,527 @@ a:active {
 /*           |                        */
 /*           V                       */
 
-
 /* mobile devices */
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px) {
+  /* PARENT CONTAINERS */
+  .container {
+    max-width: 80vw;
+    display: block !important;
+    
+  }
+  .user_details_camera_settings_location_container {
+    display: block !important;
+  }
+  .thumb_photos_container {
+    max-width: inherit;
+    display: none;
+  }
 
+  /* CHILD CONTAINERS */
+
+  .user_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+
+    display: inline !important;
+    /* guide only */
+    /* border: 2px solid red; */
+  }
+  .camera_location_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+
+    display: inline !important;
+    /* guide only */
+    /* border: 2px solid blue; */
+  }
+
+  .user_name {
+    font-size: 5vw;
+  }
+
+  .links {
+  }
+
+  .instagram {
+    margin: 1%;
+  }
+
+  .photo_link {
+    margin: 1%;
+  }
+  .user_link {
+    margin: 1%;
+  }
+  .portfolio_link{
+    margin: 1%;
+  }
+
+
+  /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
+
+  .hero_photo {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .enlargedImage {
+    max-width: 100%;
+    max-height: 800px;
+    /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+   
+  }
+
+  /* text */
+  .hero_photo_label,
+  .typography_settings {
+    font-size: 2vw;
+  }
+  .link_typography {
+    font-size: 2vw;
+  }
+
+
+
+  
+/* zoomed when clicked */
+input[type="checkbox"] {
+    display: none !important;
+  }
+  
+  .hero_photo img {
+    transition: none !important;
+    cursor:initial !important;
+  
+    /* -moz-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+      -webkit-transition: all 1s ease;
+      -o-transition: all 1s ease; */
+  }
+  
+  input[type="checkbox"]:checked ~ label > img {
+    transform: none !important;
+    margin: 0px;
+    
+    transition: none !important;
+    cursor:initial !important;
+  }
 }
 
 /* iPads, Tablets */
-@media screen and (min-width: 481px) and  (max-width: 768px){
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  /* PARENT CONTAINERS */
+  .container {
+    max-width: 80vw;
+    display: block !important;
     
+  }
+  .user_details_camera_settings_location_container {
+    display: block !important;
+  }
+  .thumb_photos_container {
+    max-width: inherit;
+    display: none;
+  }
+
+  /* CHILD CONTAINERS */
+
+  .user_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+
+    display: inline !important;
+    /* guide only */
+    /* border: 2px solid red; */
+  }
+  .camera_location_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+
+    display: inline !important;
+    /* guide only */
+    /* border: 2px solid blue; */
+  }
+
+  .user_name {
+    font-size: 5vw;
+  }
+
+  .links {
+  }
+
+  .instagram {
+    margin: 1%;
+  }
+
+  .photo_link {
+    margin: 1%;
+  }
+  .user_link {
+    margin: 1%;
+  }
+  .portfolio_link{
+    margin: 1%;
+  }
+
+  /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
+
+  .hero_photo {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+  }
+  .enlargedImage {
+    max-width: 100%;
+    max-height: 800px;
+    /* display: block;
+    margin-left: auto;
+    margin-right: auto; */
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+  }
+
+  /* text */
+  .hero_photo_label,
+  .typography_settings {
+    font-size: 2vw;
+  }
+  .link_typography {
+    font-size: 2vw;
+  }
+
+
+
+  
+/* zoomed when clicked */
+input[type="checkbox"] {
+    display: none !important;
+  }
+  
+  .hero_photo img {
+    transition: none !important;
+    cursor:initial !important;
+  
+    /* -moz-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+      -webkit-transition: all 1s ease;
+      -o-transition: all 1s ease; */
+  }
+  
+  input[type="checkbox"]:checked ~ label > img {
+    transform: none !important;
+    margin: 0px;
+    
+    transition: none !important;
+    cursor:initial !important;
+  }
 }
 
 /* Small screens, laptops */
-@media screen and (min-width: 769px) and (max-width: 1024px){
-    
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* PARENT CONTAINERS */
+  .container {
+    max-width: 100vw;
+  }
+  .user_details_camera_settings_location_container {
+    max-width: inherit;
+    resize: none;
+  }
+  .thumb_photos_container {
+    max-width: inherit;
+  }
+
+  /* CHILD CONTAINERS */
+
+  .user_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    /* guide only */
+    /* border: 2px solid red; */
+  }
+  .camera_location_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    /* guide only */
+    /* border: 2px solid blue; */
+  }
+
+  .user_name {
+    font-size: 3vw;
+  }
+
+  .links {
+  }
+
+  .instagram {
+    margin: 1%;
+  }
+  .photo_link {
+    margin: 1%;
+  }
+  .user_link {
+    margin: 1%;
+  }
+  .portfolio_link{
+    margin: 1%;
+  }
+
+  /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
+
+  .hero_photo {
+    max-width: 100%;
+
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .enlargedImage {
+    max-width: 100%;
+    max-height: 800px;
+
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+  }
+
+  /* text */
+  .hero_photo_label,
+  .typography_settings {
+    font-size: 1vw;
+  }
+  .link_typography {
+    font-size: 1vw;
+  }
 }
 
 /* Desktops, large screens */
-@media screen and (min-width: 1025px) and (max-width: 1200px){
-    
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  /* PARENT CONTAINERS */
+  .container {
+    max-width: 100vw;
+  }
+  .user_details_camera_settings_location_container {
+    max-width: inherit;
+    resize: none;
+  }
+  .thumb_photos_container {
+    max-width: inherit;
+  }
+
+  /* CHILD CONTAINERS */
+
+  .user_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    /* guide only */
+    /* border: 2px solid red; */
+  }
+  .camera_location_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    /* guide only */
+    /* border: 2px solid blue; */
+  }
+
+  .user_name {
+    font-size: 2vw;
+  }
+
+  .links {
+  }
+
+  .instagram {
+    margin: 2%;
+  }
+
+  .photo_link {
+    margin: 2%;
+  }
+  .user_link {
+    margin: 2%;
+  }
+  .portfolio_link{
+    margin: 2%;
+  }
+
+
+  /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
+
+  .hero_photo {
+    max-width: 100%;
+  }
+  .enlargedImage {
+    max-width: 100%;
+    max-height: 800px;
+  }
+
+  /* text */
+  .hero_photo_label,
+  .typography_settings {
+    font-size: 0.9vw;
+  }
+  .link_typography {
+    font-size: 0.8vw;
+  }
 }
 
 /* Extra large screens, TV */
-@media screen and (min-width: 1201px){
+@media screen and (min-width: 1201px) and (max-width: 2559px) {
+  /* PARENT CONTAINERS */
+  .container {
+    max-width: 100vw;
+  }
+  .user_details_camera_settings_location_container {
+    max-width: inherit;
+    resize: none;
+  }
+  .thumb_photos_container {
+    max-width: inherit;
+  }
 
-    /* PARENT CONTAINERS */
-    .container{
-        max-width: 100vw;
-    }
-    .user_details_camera_settings_location_container{
-        max-width: inherit;
-        resize: none;
-    }
-    .thumb_photos_container{
-        max-width: inherit;
-    }
+  /* CHILD CONTAINERS */
 
-    /* CHILD CONTAINERS */
+  .user_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    /* guide only */
+    /* border: 2px solid red; */
+  }
+  .camera_location_settings {
+    padding-top: 0.8vw;
+    padding-bottom: 0.8vw;
+    /* guide only */
+    /* border: 2px solid blue; */
+  }
 
-    .user_settings{
-        padding-top: 0.5vw;
-        padding-bottom: 0.5vw;
-        border: 2px solid red;
-    }
-    .camera_location_settings{
-        padding-top: 0.5vw;
-        padding-bottom: 0.5vw;
-        border: 2px solid blue;
+  .user_name {
+    font-size: 2vw;
+  }
 
-    }
+  .links {
+  }
 
-    .user_name{
-        font-size: 2vw;
-    }
-    
-    .links{
+  .instagram {
+    margin: 2%;
+  }
 
-    }
+  .photo_link {
+    margin: 2%;
+  }
+  .user_link {
+    margin: 2%;
+  }
+  .portfolio_link{
+    margin: 2%;
+  }
 
-    .instagram{
-        margin: 2%;
-    }
-    
-    .photo_link{
-        
-        margin: 2%;
-    }
-    .user_link{
-        margin: 2%;
-    }
 
-    /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
+  /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
 
-    .hero_photo{
-        max-width: 100%
-    }
-    .enlargedImage{
-        max-width: 100%;
-        max-height: 800px;
-    }
+  .hero_photo {
+    max-width: 100%;
+  }
+  .enlargedImage {
+    max-width: 100%;
+    max-height: 800px;
+  }
 
-    /* text */
-    .hero_photo_label,   .typography_settings {
-        font-size: 0.9vw;
-    }
-    .link_typography{
-        font-size: 0.8vw;
-    }
+  /* text */
+  .hero_photo_label,
+  .typography_settings {
+    font-size: 0.9vw;
+  }
+  .link_typography {
+    font-size: 0.8vw;
+  }
+}
+
+/* 3k, 4K and up */
+@media screen and (min-width: 2560px) {
+  /* PARENT CONTAINERS */
+  .container {
+    max-width: 150vw;
+  }
+  .user_details_camera_settings_location_container {
+    max-width: inherit;
+    resize: none;
+  }
+  .thumb_photos_container {
+    max-width: inherit;
+  }
+
+  /* CHILD CONTAINERS */
+
+  .user_settings {
+    padding-top: 1.3vw;
+    padding-bottom: 1.3vw;
+    /* guide only */
+    /* border: 2px solid red; */
+  }
+  .camera_location_settings {
+    padding-top: 1.3vw;
+    padding-bottom: 1.3vw;
+    /* guide only */
+    /* border: 2px solid blue; */
+  }
+
+  .user_name {
+    font-size: 3.2vw;
+  }
+
+  .links {
+  }
+
+  .instagram {
+    margin: 3.8%;
+  }
+
+  .photo_link {
+    margin: 3.8%;
+  }
+  .user_link {
+    margin: 3.8%;
+  }
+
+  /* HERO PHOTO CONTAINER AND THE ACTUAL HERO PHOTO */
+
+  .hero_photo {
+    max-width: 100%;
+  }
+  .enlargedImage {
+    max-width: 100%;
+    max-height: 1500px;
+  }
+
+  /* text */
+  .hero_photo_label,
+  .typography_settings {
+    font-size: 1.1vw;
+  }
+  .link_typography {
+    font-size: 1.1vw;
+  }
 }
