--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
           <p class="text-muted">
-            This site is only intended for educational purposes as i used both unsplash api and my own photos to display in this site.
+            This site is only intended for educational purposes as i used both unsplash api to display in this site.
 
             Nostrud sriracha in beard sunt consectetur forage art party, chambray wolf williamsburg enim. Thundercats nisi sed, eu umami pug vinyl activated charcoal laboris 3 wolf moon deserunt YOLO lorem.
           </p>
