--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -13,7 +13,7 @@
       </p>
       <p>
         <a href="#" class="btn btn-primary my-2">
-          Click me to invert colors!
+          Primary action
         </a>
         <a href="#" class="btn btn-secondary my-2">Secondary action</a>
       </p>
@@ -42,7 +42,8 @@
                 >
                   <img
                     class="THE_IMAGE"
-                    src="{{ image.urls.thumb }}"
+                    src="{{ image.urls.regular }}"
+                    loading = "lazy"
                     alt="random photos from unsplash"
                     width="100%"
                     height="225"
@@ -60,7 +61,7 @@
                       data-bs-target="#exampleModal"
                       (click)="viewPhoto(image.id)"
                     >
-                      view photo
+                      view
                     </button>
                   </div>
                   <!--<small class="text-muted">9 mins</small>-->
